...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="22"/>
                                <state key="normal" title="POST">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Discussion Board" id="4yF-J2-urr">
                        <barButtonItem key="rightBarButtonItem" title="New Post" id="WMk-Ll-U3e">
                            <connections>
                                <segue destination="0pN-eJ-aO8" kind="push" identifier="addPostSegue" id="Nuc-d7-hp2"/>
...
                                <color key="backgroundColor" red="0.24350234498154655" green="0.29731089493861451" blue="0.89087041884816753" alpha="0.69999445921985815" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                <state key="normal" title="false">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.6705882352941176" green="0.29411764705882354" blue="0.99215686274509807" alpha="0.7450964095744681" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                <state key="normal" title="Go Test">
                                    <color key="titleColor" red="0.32704205710000001" green="1" blue="0.990413447" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <color key="backgroundColor" red="0.6588235294117647" green="0.27058823529411763" blue="0.99215686274509807" alpha="0.75434951241134751" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                <state key="normal" title="Discuss">
                                    <color key="titleColor" red="0.32704205710000001" green="1" blue="0.990413447" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <color key="backgroundColor" red="0.2968737944" green="0.604504131" blue="1" alpha="0.84599401595744683" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="23"/>
                                <state key="normal" title="Chapter 2: Structures">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.66553767129999997" green="0.28999681640000002" blue="1" alpha="0.74631538119999996" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="15"/>
                                <state key="normal" title="Video">
                                    <color key="titleColor" red="0.32704205710000001" green="1" blue="0.990413447" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.24350234500000001" green="0.29731089490000001" blue="0.89087041879999995" alpha="0.70492575349999997" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                <state key="normal" title="int c[][] = new int[10][10];">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.24350234500000001" green="0.29731089490000001" blue="0.89087041879999995" alpha="0.69999445920000003" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                <state key="normal" title="x=4,y=6">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.24350234500000001" green="0.29731089490000001" blue="0.89087041879999995" alpha="0.69999445920000003" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                <state key="normal" title="continue">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <color key="backgroundColor" red="0.24350234500000001" green="0.29731089490000001" blue="0.89087041879999995" alpha="0.69844304079999997" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                <state key="normal" title="Value for i = 1 value for j = 1">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
